--- a/Savio/RegistrationViewController/RegistrationCell/FindAddressTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/FindAddressTableViewCell.xib
@@ -6,6 +6,11 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,7 +28,7 @@
                             <constraint firstAttribute="width" secondItem="3bk-Tq-jGb" secondAttribute="height" multiplier="176:27" id="ScX-dF-y1Y"/>
                             <constraint firstAttribute="width" constant="176" id="ejP-0f-sC9"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="qvP-O6-8u8"/>
