--- a/Savio/RegistrationViewController/RegistrationCell/ErrorTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/ErrorTableViewCell.xib
@@ -5,6 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Light.otf">
+            <string>GothamRounded-Light</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,17 +21,19 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmA-Le-iBO">
-                        <rect key="frame" x="8" y="9" width="304" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <rect key="frame" x="8" y="17" width="304" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="KM2-Hn-Nih"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="15"/>
                         <color key="textColor" red="0.74901960784313726" green="0.34509803921568627" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="qmA-Le-iBO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="1" id="9Vw-80-qbv"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="qmA-Le-iBO" secondAttribute="bottom" constant="2" id="CCy-zk-9N7"/>
-                    <constraint firstItem="qmA-Le-iBO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Oxf-TE-pPh"/>
-                    <constraint firstItem="qmA-Le-iBO" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="cKe-Fn-IxR"/>
+                    <constraint firstItem="qmA-Le-iBO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="6hr-Vg-gED"/>
+                    <constraint firstItem="qmA-Le-iBO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="NDp-W9-Hz3"/>
+                    <constraint firstItem="qmA-Le-iBO" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vfL-Fl-DtW"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
