--- a/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
@@ -6,6 +6,11 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,7 +28,7 @@
                             <constraint firstAttribute="width" secondItem="DSe-vs-hRB" secondAttribute="height" multiplier="10:3" id="Knk-D4-MOW"/>
                             <constraint firstAttribute="width" constant="90" id="Ltc-8j-ySu"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <outlet property="delegate" destination="-1" id="eBg-uj-AwQ"/>
