--- a/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
+++ b/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
@@ -10,9 +10,9 @@
         </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
-            <string>GothamRounded-Medium</string>
         </mutableArray>
         <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
@@ -35,14 +35,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
-                    <rect key="frame" x="263" y="50" width="75" height="75"/>
+                    <rect key="frame" x="258" y="25" width="85" height="85"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="75" id="Esx-OH-HMA"/>
-                        <constraint firstAttribute="height" constant="75" id="dpE-lk-Vzi"/>
+                        <constraint firstAttribute="width" constant="85" id="Esx-OH-HMA"/>
+                        <constraint firstAttribute="height" constant="85" id="dpE-lk-Vzi"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We've sent you a 5 digit code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
-                    <rect key="frame" x="160" y="130" width="280" height="100"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
+                    <rect key="frame" x="160" y="105" width="280" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="RN8-F7-ylq"/>
                         <constraint firstAttribute="width" constant="280" id="vID-Rp-pBv"/>
@@ -52,7 +52,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
-                    <rect key="frame" x="140" y="238" width="320" height="21"/>
+                    <rect key="frame" x="140" y="213" width="320" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="9it-s9-tPB"/>
                         <constraint firstAttribute="height" constant="21" id="l7o-Kk-oDK"/>
@@ -70,7 +70,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
-                    <rect key="frame" x="30" y="397" width="540" height="40"/>
+                    <rect key="frame" x="30" y="372" width="540" height="40"/>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="Jx5-lP-BpK"/>
@@ -90,12 +90,12 @@
                     </connections>
                 </button>
                 <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
-                    <rect key="frame" x="30" y="234" width="540" height="40"/>
+                    <rect key="frame" x="30" y="209" width="540" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="1h3-uh-xpX"/>
                         <constraint firstAttribute="height" constant="40" id="end-TZ-Q6z"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
+                    <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                     <variation key="default">
                         <mask key="constraints">
@@ -107,14 +107,14 @@
                     </connections>
                 </textField>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
-                    <rect key="frame" x="253" y="329" width="95" height="30"/>
+                    <rect key="frame" x="253" y="304" width="95" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="I4p-wr-5do"/>
                         <constraint firstAttribute="width" constant="95" id="iC4-aq-eXZ"/>
                     </constraints>
                     <state key="normal">
                         <attributedString key="attributedTitle">
-                            <fragment content="Resent Code">
+                            <fragment content="Resend Code">
                                 <attributes>
                                     <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                     <font key="NSFont" metaFont="system" size="14"/>
@@ -128,7 +128,7 @@
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
-                    <rect key="frame" x="277" y="450" width="46" height="20"/>
+                    <rect key="frame" x="277" y="425" width="46" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="1RL-Te-PCX"/>
                         <constraint firstAttribute="width" constant="46" id="cL4-h2-iRW"/>
@@ -149,7 +149,7 @@
                     </connections>
                 </button>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
-                    <rect key="frame" x="171" y="215" width="258" height="21"/>
+                    <rect key="frame" x="171" y="190" width="258" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ef4-W7-OZY"/>
                         <constraint firstAttribute="width" constant="258" id="tNL-i6-SX6"/>
@@ -168,8 +168,8 @@
                 <constraint firstItem="F0n-B1-XQp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7nX-sf-fQh"/>
                 <constraint firstItem="0wM-Li-Y8L" firstAttribute="top" secondItem="F0n-B1-XQp" secondAttribute="bottom" constant="13" id="FF8-U8-Egj"/>
                 <constraint firstItem="0wM-Li-Y8L" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="L4q-WT-nP8"/>
-                <constraint firstItem="Oqd-I4-ww3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="LgF-dt-sY0"/>
-                <constraint firstItem="Oqd-I4-ww3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Mu8-hz-wJE"/>
+                <constraint firstItem="Oqd-I4-ww3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="LgF-dt-sY0"/>
+                <constraint firstItem="Oqd-I4-ww3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="0.5" id="Mu8-hz-wJE"/>
                 <constraint firstItem="F0n-B1-XQp" firstAttribute="top" secondItem="8DL-NG-yGU" secondAttribute="bottom" constant="167" id="NE6-6n-UwK"/>
                 <constraint firstItem="aKg-ku-OcO" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NwS-IL-xii"/>
                 <constraint firstAttribute="trailing" secondItem="Vat-uq-VUl" secondAttribute="trailing" constant="30" id="P7K-dA-dDH"/>
@@ -180,7 +180,7 @@
                 <constraint firstItem="aKg-ku-OcO" firstAttribute="top" secondItem="Vat-uq-VUl" secondAttribute="bottom" constant="55" id="h3H-zH-nut"/>
                 <constraint firstAttribute="trailing" secondItem="F0n-B1-XQp" secondAttribute="trailing" constant="30" id="hxf-gm-KuS"/>
                 <constraint firstItem="Vat-uq-VUl" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="i8e-TS-1JO"/>
-                <constraint firstItem="8DL-NG-yGU" firstAttribute="top" secondItem="Oqd-I4-ww3" secondAttribute="bottom" constant="5" id="oS5-LR-dNB"/>
+                <constraint firstItem="8DL-NG-yGU" firstAttribute="top" secondItem="Oqd-I4-ww3" secondAttribute="bottom" constant="-5" id="oS5-LR-dNB"/>
                 <constraint firstItem="Vat-uq-VUl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="wVH-9a-gzn"/>
                 <constraint firstItem="YnB-er-ZmT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="yvz-LR-eYa"/>
                 <constraint firstItem="GpB-HN-YI8" firstAttribute="top" secondItem="8DL-NG-yGU" secondAttribute="bottom" constant="8" id="zRG-ex-x4I"/>
