--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -10,10 +10,10 @@
         </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
             <string>GothamRounded-Medium</string>
-            <string>GothamRounded-Medium</string>
-            <string>GothamRounded-Medium</string>
         </mutableArray>
         <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
@@ -47,25 +47,25 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-qH-aIi">
-                            <rect key="frame" x="262" y="35" width="75" height="75"/>
+                            <rect key="frame" x="258" y="25" width="85" height="85"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="75" id="B6C-5l-EPx"/>
-                                <constraint firstAttribute="width" constant="75" id="r3Q-Hz-W0D"/>
+                                <constraint firstAttribute="height" constant="85" id="B6C-5l-EPx"/>
+                                <constraint firstAttribute="width" constant="85" id="r3Q-Hz-W0D"/>
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
-                            <rect key="frame" x="30" y="240" width="540" height="40"/>
+                            <rect key="frame" x="30" y="230" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="p0G-oz-jq5"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="BSG-8O-Nyd"/>
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Caz-QS-qcK">
-                            <rect key="frame" x="30" y="340" width="540" height="40"/>
+                            <rect key="frame" x="30" y="330" width="540" height="40"/>
                             <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="KBk-hQ-wP7"/>
@@ -79,7 +79,7 @@
                             </connections>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter 4 digit passcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aa7-UQ-9QT">
-                            <rect key="frame" x="164" y="220" width="273" height="21"/>
+                            <rect key="frame" x="164" y="210" width="273" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="8J8-52-nbC"/>
                                 <constraint firstAttribute="width" constant="273" id="uu8-m4-hoK"/>
@@ -89,18 +89,18 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-PM-TIF">
-                            <rect key="frame" x="30" y="290" width="540" height="40"/>
+                            <rect key="frame" x="30" y="280" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="wrx-jD-Wft"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
+                            <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             <connections>
                                 <outlet property="delegate" destination="-1" id="sLM-sd-NOb"/>
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dxE-82-rRE">
-                            <rect key="frame" x="277" y="400" width="46" height="30"/>
+                            <rect key="frame" x="277" y="390" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="46" id="IEI-n0-zVG"/>
                                 <constraint firstAttribute="height" constant="30" id="r4z-dK-HxN"/>
@@ -131,17 +131,17 @@
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="PMY-q7-eTH"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="RfY-3f-Da8"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="TNd-fm-YIk"/>
-                        <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="35" id="U33-fX-z18"/>
+                        <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="25" id="U33-fX-z18"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="Vt5-RQ-uC6"/>
-                        <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="YdO-Xd-1KC"/>
+                        <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" constant="0.5" id="YdO-Xd-1KC"/>
                         <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="r4N-aq-d7H" secondAttribute="top" constant="119" id="ZUp-F3-4fu"/>
-                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="110" id="bde-7G-8RC"/>
+                        <constraint firstItem="Aa7-UQ-9QT" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="100" id="bde-7G-8RC"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="dhz-ho-e6v"/>
                         <constraint firstAttribute="bottom" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="220" id="g7H-sB-5rP"/>
                         <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="r4N-aq-d7H" secondAttribute="centerX" id="jgA-dG-GE9"/>
                         <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="10" id="nOa-Si-waG"/>
                         <constraint firstItem="Lq4-PM-TIF" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="vX3-mx-Hkf"/>
-                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="130" id="w7A-Pw-Lyh"/>
+                        <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="120" id="w7A-Pw-Lyh"/>
                         <constraint firstItem="JfG-pe-WIG" firstAttribute="leading" secondItem="r4N-aq-d7H" secondAttribute="leading" constant="30" id="y8p-1a-sXA"/>
                     </constraints>
                     <connections>
