--- a/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
@@ -6,8 +6,8 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Medium.otf">
-            <string>GothamRounded-Medium</string>
+        <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -22,16 +22,32 @@
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t78-BE-f8p">
                         <rect key="frame" x="8" y="4" width="304" height="27"/>
-                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <outlet property="delegate" destination="-1" id="nYZ-t5-Urt"/>
                         </connections>
                     </textField>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJr-dw-1dQ">
+                        <rect key="frame" x="273" y="3" width="30" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="28" id="2JH-eZ-LY3"/>
+                            <constraint firstAttribute="width" constant="30" id="fas-0V-rPJ"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="pVr-bn-kdg"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="arrow_down.png"/>
+                        <connections>
+                            <action selector="clickeOnDropDownArrow:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2yC-ER-UJZ"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="CJr-dw-1dQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="2mx-Ll-6bz"/>
                     <constraint firstAttribute="bottomMargin" secondItem="t78-BE-f8p" secondAttribute="bottom" constant="-5" id="3Il-Ee-OgW"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="9" id="7sB-hp-AL4"/>
                     <constraint firstItem="t78-BE-f8p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="7yE-OL-Y21"/>
+                    <constraint firstItem="CJr-dw-1dQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="8q3-Da-yLB"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="CJr-dw-1dQ" secondAttribute="trailing" constant="9" id="Vwj-ln-2y3"/>
                     <constraint firstItem="t78-BE-f8p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="a0T-fO-4aE"/>
                     <constraint firstItem="t78-BE-f8p" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vev-aS-ffk"/>
                 </constraints>
@@ -39,7 +55,10 @@
             <connections>
                 <outlet property="tf" destination="t78-BE-f8p" id="A1V-Qm-pB1"/>
             </connections>
-            <point key="canvasLocation" x="353" y="220"/>
+            <point key="canvasLocation" x="351" y="215.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="arrow_down.png" width="80" height="80"/>
+    </resources>
 </document>
