--- a/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/TitleTableViewCell.xib
@@ -7,8 +7,9 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Medium.otf">
-            <string>GothamRounded-Medium</string>
+        <mutableArray key="gotham-rounded-book-2.otf">
+            <string>GothamRounded-Book</string>
+            <string>GothamRounded-Book</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -22,13 +23,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DSe-vs-hRB">
-                        <rect key="frame" x="6" y="4" width="90" height="27"/>
+                        <rect key="frame" x="8" y="4" width="90" height="27"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="27" id="3Y4-bN-PIZ"/>
-                            <constraint firstAttribute="width" secondItem="DSe-vs-hRB" secondAttribute="height" multiplier="10:3" id="Knk-D4-MOW"/>
-                            <constraint firstAttribute="width" constant="90" id="Ltc-8j-ySu"/>
+                            <constraint firstAttribute="width" constant="90" id="YP6-EX-4GO"/>
+                            <constraint firstAttribute="width" secondItem="DSe-vs-hRB" secondAttribute="height" multiplier="10:3" id="mZI-Y9-PbA"/>
+                            <constraint firstAttribute="height" constant="27" id="si2-QT-F0G"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <outlet property="delegate" destination="-1" id="eBg-uj-AwQ"/>
@@ -41,21 +42,36 @@
                             <constraint firstAttribute="height" constant="27" id="bcf-FO-FlU"/>
                             <constraint firstAttribute="width" secondItem="bcP-nc-8gY" secondAttribute="height" multiplier="70:9" id="hIF-GW-AGY"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
                             <outlet property="delegate" destination="-1" id="s6X-23-1jk"/>
                         </connections>
                     </textField>
+                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yms-xY-RA2">
+                        <rect key="frame" x="75" y="8" width="20" height="20"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="DQf-Jq-1jc"/>
+                            <constraint firstAttribute="height" constant="20" id="EKI-Tt-aH1"/>
+                            <constraint firstAttribute="width" secondItem="yms-xY-RA2" secondAttribute="height" multiplier="1:1" id="Vwb-hE-8at"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="down-arrow-15x15.png"/>
+                        <connections>
+                            <action selector="clickeOnDropDownArrow:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IVE-ci-NKx"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="DSe-vs-hRB" secondAttribute="bottom" constant="-5" id="0ON-GD-7hL"/>
                     <constraint firstItem="bcP-nc-8gY" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="41y-Uj-sKA"/>
-                    <constraint firstItem="DSe-vs-hRB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-2" id="C7t-7N-WQY"/>
-                    <constraint firstItem="DSe-vs-hRB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="OQJ-3J-TK1"/>
-                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="DSe-vs-hRB" secondAttribute="trailing" constant="6" id="c1L-aQ-bCC"/>
+                    <constraint firstItem="DSe-vs-hRB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="IVz-6l-YY8"/>
+                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="DSe-vs-hRB" secondAttribute="trailing" constant="4" id="JkE-Vl-8lK"/>
+                    <constraint firstItem="bcP-nc-8gY" firstAttribute="leading" secondItem="yms-xY-RA2" secondAttribute="trailing" constant="7" id="Wjs-V3-yfg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="DSe-vs-hRB" secondAttribute="bottom" constant="-5" id="cqY-sO-pHL"/>
                     <constraint firstItem="bcP-nc-8gY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="fuh-Us-uvR"/>
+                    <constraint firstItem="yms-xY-RA2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="lpT-pO-eCH"/>
                     <constraint firstAttribute="bottomMargin" secondItem="bcP-nc-8gY" secondAttribute="bottom" constant="-5" id="nGW-o1-KPt"/>
+                    <constraint firstItem="DSe-vs-hRB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="zGV-1a-o2s"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -65,4 +81,7 @@
             <point key="canvasLocation" x="575" y="209.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="down-arrow-15x15.png" width="15" height="15"/>
+    </resources>
 </document>
