--- a/Savio/RegistrationViewController/SARegistrationViewController.xib
+++ b/Savio/RegistrationViewController/SARegistrationViewController.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SARegistrationViewController" customModule="Savio" customModuleProvider="target">
@@ -18,15 +17,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="KrR-W3-iqx">
-                    <rect key="frame" x="275" y="42" width="50" height="50"/>
+                    <rect key="frame" x="258" y="25" width="85" height="85"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="KrR-W3-iqx" secondAttribute="height" multiplier="1:1" id="BLB-SD-HHD"/>
-                        <constraint firstAttribute="width" constant="50" id="Ebo-Qj-JjU"/>
-                        <constraint firstAttribute="height" constant="50" id="Mfh-Kw-oBo"/>
+                        <constraint firstAttribute="width" constant="85" id="VyU-lj-Fz1"/>
+                        <constraint firstAttribute="height" constant="85" id="e3m-MG-ukj"/>
                     </constraints>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SEh-U8-9LS">
-                    <rect key="frame" x="0.0" y="122" width="600" height="478"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SEh-U8-9LS">
+                    <rect key="frame" x="0.0" y="135" width="600" height="465"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="bZP-pR-2FF"/>
@@ -36,17 +34,17 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="SEh-U8-9LS" secondAttribute="bottom" id="WDa-Ix-4Vx"/>
-                <constraint firstItem="SEh-U8-9LS" firstAttribute="top" secondItem="KrR-W3-iqx" secondAttribute="bottom" constant="30" id="WHu-WR-N3P"/>
-                <constraint firstAttribute="trailing" secondItem="SEh-U8-9LS" secondAttribute="trailing" id="jZJ-nu-Ooe"/>
-                <constraint firstItem="KrR-W3-iqx" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jk0-Ha-JBn"/>
-                <constraint firstItem="SEh-U8-9LS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pg2-tg-cQY"/>
-                <constraint firstItem="KrR-W3-iqx" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="42" id="z2f-N0-I3z"/>
+                <constraint firstItem="KrR-W3-iqx" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5WI-NF-9oN"/>
+                <constraint firstAttribute="trailing" secondItem="SEh-U8-9LS" secondAttribute="trailing" id="6q6-Cm-dA0"/>
+                <constraint firstItem="SEh-U8-9LS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="90L-Wj-4Nl"/>
+                <constraint firstItem="KrR-W3-iqx" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="25" id="cnX-qa-nrK"/>
+                <constraint firstItem="SEh-U8-9LS" firstAttribute="top" secondItem="KrR-W3-iqx" secondAttribute="bottom" constant="25" id="iMc-zu-BQT"/>
+                <constraint firstAttribute="bottom" secondItem="SEh-U8-9LS" secondAttribute="bottom" id="orD-cB-igV"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
     <resources>
-        <image name="savivo-logo.png" width="80" height="80"/>
+        <image name="savivo-logo.png" width="85" height="85"/>
     </resources>
 </document>
